--- a/Frontend/uitour-app/package.json
+++ b/Frontend/uitour-app/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@iconify/react": "^6.0.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
