--- a/Frontend/uitour-app/package.json
+++ b/Frontend/uitour-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.2",
+    "@react-google-maps/api": "^2.20.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
