--- a/Frontend/uitour-app/package.json
+++ b/Frontend/uitour-app/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.2",
-    "@react-google-maps/api": "^2.20.7",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "leaflet": "^1.9.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
