--- a/Backend/UITour/appsettings.json
+++ b/Backend/UITour/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDB": "Server=TAI\\SQLEXPRESS;Database=UITour;Trusted_Connection=True;TrustServerCertificate=True;"
+    "MyDB": "Server=LEGION5-15IAH7\\SQLEXPRESS;Database=UITour;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
