--- a/Frontend/uitour-app/package.json
+++ b/Frontend/uitour-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.2",
+    "@react-google-maps/api": "^2.20.7",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
