them tinh nang forgot password, xac thuc email khi dang nhap

--- a/Backend/UITour/appsettings.json
+++ b/Backend/UITour/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyDB": "Server=TAI\\SQLEXPRESS;Database=UITour;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "UITour Support",
+    "SenderEmail": "hoangvantai162@gmail.com",
+    "Username": "hoangvantai162@gmail.com",
+    "Password": "gnzo irap bmgs rknm"
   }
 }
+
+
