hoan thien chuc nang tao moi phong, tour và test thử JWT cho admin

--- a/Backend/UITour/appsettings.json
+++ b/Backend/UITour/appsettings.json
@@ -16,6 +16,12 @@
     "SenderEmail": "hoangvantai162@gmail.com",
     "Username": "hoangvantai162@gmail.com",
     "Password": "gnzo irap bmgs rknm"
+  },
+  "JwtSettings": {
+    "SecretKey": "UITour_Super_Secret_Key_For_JWT_Token_Generation_2024_Must_Be_Long_Enough_For_Security",
+    "Issuer": "UITour",
+    "Audience": "UITourUsers",
+    "ExpirationInMinutes": 1440
   }
 }
 
