--- a/Backend/UITour/appsettings.json
+++ b/Backend/UITour/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDB": "Server=LAPTOP-PACKVEN1;Database=UITour;Trusted_Connection=True;TrustServerCertificate=True;"
+    "MyDB": "Server=RYHAT;Database=UITour;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "SmtpSettings": {
     "Server": "smtp.gmail.com",
