--- a/Backend/UITour/appsettings.json
+++ b/Backend/UITour/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDB": "Server=LAPTOP-PACKVEN1;Database=UITour;Trusted_Connection=True;TrustServerCertificate=True;"
+    "MyDB": "Server=ryhat;Database=UITour;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "SmtpSettings": {
     "Server": "smtp.gmail.com",
@@ -22,6 +22,18 @@
     "Issuer": "UITour",
     "Audience": "UITourUsers",
     "ExpirationInMinutes": 1440
+  },
+  "MomoSettings": {
+    "PartnerCode": "MOMO",
+    "AccessKey": "F8BBA842ECF85",
+    "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
+    "Endpoint": "https://test-payment.momo.vn/v2/gateway/api/create",
+    "RedirectUrl": "http://localhost:5173/payment",
+    "IpnUrl": "https://sandbox.uitour/payment/ipn",
+    "RequestType": "captureWallet",
+    "PartnerName": "UITour Sandbox",
+    "StoreId": "UITourSandboxStore",
+    "DefaultUsdToVndRate": 24000
   }
 }
 
