create tour da them duoc mainCategory

--- a/Backend/UITour/appsettings.json
+++ b/Backend/UITour/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDB": "Server=ryhat;Database=UITour;Trusted_Connection=True;TrustServerCertificate=True;"
+    "MyDB": "Server=TAI\\SQLEXPRESS;Database=UITour;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "SmtpSettings": {
     "Server": "smtp.gmail.com",
