--- a/Backend/UITour/appsettings.json
+++ b/Backend/UITour/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDB": "Server=LAPTOP-PACKVEN1;Database=UITour;Trusted_Connection=True;TrustServerCertificate=True;"
+    "MyDB": "Server=ryhat;Database=UITour;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "SmtpSettings": {
     "Server": "smtp.gmail.com",
@@ -34,6 +34,10 @@
     "PartnerName": "UITour Sandbox",
     "StoreId": "UITourSandboxStore",
     "DefaultUsdToVndRate": 24000
+  },
+  "Ollama": {
+    "BaseUrl": "http://localhost:11434",
+    "Model": "llama3"
   }
 }
 
