fix hien ava o man property

--- a/.gitignore
+++ b/.gitignore
@@ -417,3 +417,6 @@ FodyWeavers.xsd
 *.msm
 *.msp
 /Backend/UITour/appsettings.json
+/Backend/UITour/wwwroot/uploads/images
+/Backend/UITour/appsettings.json
+/.gitignore
