--- a/Frontend/uitour-app/env.example
+++ b/Frontend/uitour-app/env.example
@@ -6,8 +6,9 @@
 # Enable: Maps JavaScript API, Places API
 REACT_APP_GOOGLE_MAPS_API_KEY=YOUR_GOOGLE_MAPS_API_KEY_HERE
 
-# Backend API URL
-REACT_APP_API_BASE_URL=http://localhost:5000/api
+# Backend API URL (Vite)
+# Default to HTTP dev port; set to your actual backend if different.
+VITE_API_BASE_URL=http://localhost:5069
 
 # Other environment variables
 REACT_APP_APP_NAME=UiTour
