--- a/.gitignore
+++ b/.gitignore
@@ -418,3 +418,4 @@ FodyWeavers.xsd
 *.msp
 /Backend/UITour/appsettings.json
 /Backend/UITour/wwwroot/uploads/images
+/Backend/UITour/appsettings.json
