--- a/Backend/UITour/UITour.csproj
+++ b/Backend/UITour/UITour.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>305c4b0f-0a59-4da1-b03a-9cc33438b08f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
